--- a/DestinyWeaponSwap/My Project/Resources.resx
+++ b/DestinyWeaponSwap/My Project/Resources.resx
@@ -118,13 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Cue01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Que01.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="Cue02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="VoteStart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Que02.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Cue03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="VoteEnd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Que03.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="HardLight" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -177,5 +174,8 @@
   </data>
   <data name="Zhalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Guns\Zhalo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Death" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Que01.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
