--- a/DestinyWeaponSwap/My Project/Resources.resx
+++ b/DestinyWeaponSwap/My Project/Resources.resx
@@ -175,7 +175,7 @@
   <data name="Zhalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Guns\Zhalo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Death" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="SwitchGun" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Que01.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
