--- a/DestinyWeaponSwap/My Project/Resources.resx
+++ b/DestinyWeaponSwap/My Project/Resources.resx
@@ -149,7 +149,7 @@
     <value>..\Resources\Guns\NTTE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Null" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Null.png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\Null.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="PDX45" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Guns\PDX45.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
